# aoc

./: .gitignore  Cargo.toml  LICENSE  README.md
2022/: .gitignore
2022/1/: Cargo.toml
2022/1/src/: main.rs
2022/2/: Cargo.toml
2022/2/src/: main.rs
2022/3/: Cargo.toml
2022/3/src/: main.rs
2022/4/: Cargo.toml
2022/4/src/: main.rs
2022/5/: Cargo.toml
2022/5/src/: main.rs
2022/6/: Cargo.toml
2022/6/src/: main.rs
2022/7/: Cargo.toml
2022/7/src/: main.rs
2022/boilerplate/: main.go
2022/day1/: main.go
2022/day1/src/: lib.rs
2022/day2/: Cargo.toml  main.go
2022/day2/src/: lib.rs
2022/day3/: Cargo.toml  main.go
2022/day3/src/: lib.rs
2022/day4/: main.go
2022/day4/src/: lib.rs
2022/day5/src/: lib.rs
2022/day6/src/: lib.rs
2022/day7/: Cargo.toml
2022/day7/src/: lib.rs
2023/: README.md
2023/1/: Cargo.toml
2023/1/src/: main.rs
2023/2/src/: main.rs
2023/3/: Cargo.toml
2023/3/src/: main.rs
2023/4/: Cargo.toml
2023/4/src/: main.rs
2023/day1/src/: lib.rs
2023/day2/src/: lib.rs
2023/day3/src/: lib.rs
2023/day4/src/: lib.rs
2024/10/: Cargo.toml
2024/10/src/: main.rs
2024/sample/: Cargo.toml
2024/sample/src/: main.rs
utils/src/: lib.rs
