[workspace]
members = [
  "utils",
  "2022/1",
  "2022/2",
  "2022/3",
  "2022/4",
  "2022/5",
  "2022/6",
  "2022/7",
  "2023/1",
  "2023/2",
  "2023/3",
  "2023/4",
  "2024/10",
]
resolver = "2"

[workspace.dependencies]
regex = "1.10"
itertools = "0.12"
anyhow = "1.0.94"
camino = "1.1.3"
indexmap = "1.9.2"
nom = "7.1.3"
